--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,7 @@
 
 @import vendor/normalize
 @import vendor/slick
+@import vendor/hamburgers
 @import bower_components/magnific-popup/dist/magnific-popup
 
 @import layout/font
@@ -18,5 +19,6 @@
 @import elements/wow
 
 @import components/header
+@import components/page-nav
 @import components/footer
 @import components/index
