--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,4 +1,18 @@
-// HEADER
+/* HEADER
 .header
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  z-index: 10
+  background: transparent
   &__wrapper
-    
+    display: flex
+    align-items: center
+    padding-top: 40px
+
+  &__logo
+    display: inline-block
+
+  &__hamburger
+    margin-left: auto
