--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -2,16 +2,36 @@
 header.header
   .container
     .header__wrapper
-      .header__logo
-        a.logo(href="/homepage.pug")
-          +icon('icon-viber')
-      .header__menu
-        ul.header__menu__list
-          - var list = ["Point 1", "Point 2", "Point 3"]
-            each item in list
-              li
-                a.header__menu__link(href="#")=item
+      a.header__logo(href="#")
+        i.icon.icon-logo
+
+      .header__hamburger
+        button(type="button" js-hamburger).hamburger.hamburger--squeeze
+          span.hamburger-box
+            span.hamburger-inner
+
+// PAGE-NAV :: START
+.page-nav
+  .container
+    .page-nav__wrapper
+      ul.page-nav__menu
+        li
+          a(href="#") Home
+        li
+          a(href="#") Portfolio
+        li
+          a(href="#") availability
+        li
+          a(href="#") blog
+        li
+          a(href="#") contact
       
-      .header__cta
-        
-// HEADER :: END
+      .page-nav__socials
+        a(href="#" target="_blank")
+          +icon('ico-social-stackoverflow')
+        a(href="#" target="_blank")
+          +icon('ico-social-fb')
+        a(href="#" target="_blank")
+          +icon('ico-social-twitter')
+        a(href="#" target="_blank")
+          +icon('ico-social-gplus')
