--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -1,4 +1,10 @@
 // FOOTER
 .footer
+  position: fixed
+  z-index: 1
+  bottom: 0
+  left: 0
+  right: 0
   &__wrapper
-    
+    display: flex
+    align-items: center
