--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -16,7 +16,8 @@ ul
 body, html
   background: white
   color: $fontColor
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-family: 'Circular Std', 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-weight: normal
   font-size: 16px
   min-width: 320px
   max-width: 100%
@@ -28,6 +29,7 @@ body, html
 .page
   display: flex
   flex-direction: column
+  min-height: 100vh
   &__content
     flex: 1 1 auto
 
@@ -35,5 +37,17 @@ body, html
   max-width: 1200px
   margin-left: auto
   margin-right: auto
-  padding-left: 20px
-  padding-right: 20px
+  padding-left: 30px
+  padding-right: 30px
+
+
+// TEMP
+.dev-bp-debug
+  position: fixed
+  right: 0
+  top: 0
+  z-index: 999
+  background: black
+  font-size: 12px
+  color: white
+  padding: 5px 10px
