--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -7,7 +7,9 @@ $wide: 1336
 $hd: 1440
 
 // COLORS
-$fontColor: #333
+$fontColor: #000
+$colorBlue: #36d8eb
+
 $colorGreen: #4ab68f
 $colorRed: #f45b63
 $colorYellow: #fda737
