--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -3,5 +3,11 @@ footer.footer(js-reveal-footer)
   .container
     .footer__wrapper
       
+      .footer__links
+        a(href="#") Terms & Conditions
+        a(href="#") Privacy Policy
       
-// FOOTER :: END
+      .footer__bottom
+        .footer__copy Copyright © 2001-2017 John Kavanagh.<br> All Rights Reserved.
+        .footer__logo
+          i.icon.icon-logo-small
