--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -9,12 +9,10 @@ $hd: 1440
 // COLORS
 $fontColor: #000
 $colorBlue: #36d8eb
-
-$colorGreen: #4ab68f
-$colorRed: #f45b63
-$colorYellow: #fda737
+$colorGreen: #5fe5a7
+$colorRed: #ff5f5c
+$colorYellow: #fbca33
 $colorOrange: #f46d36
-
 $grayColor: #999
 $borderColor: #e8e8e8
 
@@ -26,20 +24,4 @@ $ease: ease-in-out
 $twitter: #00aced
 $facebook: #3b5998
 $googleplus: #dd4b39
-$pinterest: #cb2027
-$linkedin: #007bb6
 $youtube: #bb0000
-$vimeo: #1ab7ea
-$tumblr: #32506d
-$instagram: #bc2a8d
-$flickr: #ff0084
-$dribbble: #ea4c89
-$quora: #a82400
-$foursquare: #0072b1
-$forrst: #5B9A68
-$vk: #45668e
-$wordpress: #21759b
-$stumbleupon: #EB4823
-$yahoo: #7B0099
-$blogger: #fb8f3d
-$soundcloud: #ff3a00
