--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -5,6 +5,57 @@
   bottom: 0
   left: 0
   right: 0
+  background: #f5f5f5
   &__wrapper
     display: flex
+    flex-direction: column
+
+  &__links
+    display: flex
+    justify-content: center
+    font-size: 13px
+    padding: 25px 0
+    a
+      position: relative
+      display: inline-block
+      font-size: 13px
+      margin-right: 35px
+      &:last-child
+        margin-right: 0
+      &::before
+        display: inline-block
+        content: ' '
+        position: absolute
+        bottom: -2px
+        left: 0
+        right: 0
+        background: $fontColor
+        height: 1px
+        transition: .25s $ease
+      &:hover
+        &::before
+          right: 100%
+
+  &__bottom
+    position: relative
+    display: flex
     align-items: center
+    justify-content: center
+    padding: 15px 0
+    &::before
+      display: inline-block
+      content: ' '
+      position: absolute
+      left: -15px
+      right: -15px
+      top: 0
+      background: rgba(black, .1)
+      height: 1px
+
+  &__copy
+    font-size: 11px
+    line-height: 1.5
+
+  &__logo
+    flex: 0 0 auto
+    margin-left: 25px
