--- a/src/sass/layout/_font.scss
+++ b/src/sass/layout/_font.scss
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-    font-family: 'Circular Std Book';
+    font-family: 'Circular Std';
     src: url('../fonts/CircularStd-Book.eot');
     src: url('../fonts/CircularStd-Book.eot?#iefix') format('embedded-opentype'),
         url('../fonts/CircularStd-Book.woff2') format('woff2'),
