--- a/src/sass/layout/_font.scss
+++ b/src/sass/layout/_font.scss
@@ -10,7 +10,7 @@
         url('../fonts/CircularStd-Bold.woff') format('woff'),
         url('../fonts/CircularStd-Bold.ttf') format('truetype'),
         url('../fonts/CircularStd-Bold.svg#CircularStd-Bold') format('svg');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 }
 
