--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -8,6 +8,10 @@ a
   &:hover, &:focus
     text-decoration: none
 
+p
+  line-height: 1.6
+  font-weight: normal
+
 ul
   list-style: none
   li
@@ -31,6 +35,8 @@ body, html
   flex-direction: column
   min-height: 100vh
   &__content
+    // header abs offset
+    padding-top: 150px
     flex: 1 1 auto
 
 .container
