draft mobile homepage

--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -17,13 +17,13 @@ header.header
       ul.page-nav__menu
         li
           a(href="#") Home
-        li
+        li.--h-green
           a(href="#") Portfolio
-        li
+        li.--h-yellow
           a(href="#") availability
         li
           a(href="#") blog
-        li
+        li.--h-red
           a(href="#") contact
       
       .page-nav__socials
