--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -7,6 +7,7 @@ block content
   
   // INTRO :: START
   .intro
+    // top
     .intro__top
       .intro__name
         .intro__title front <br> end web <br> devEloper
@@ -15,11 +16,41 @@ block content
         .intro__portfolio-cta
           a(href="#").link.link--green
             span PORTFOLIO
+    // bottom
     .intro__bottom
       .intro__text
         .intro__text-container
           p I'm a freelance front-end web developer based in London. With fourteen years of experience I develop responsive, high-performance websites using HTML5, CSS, and JavaScript.
-      
       .intro__bottom-cta
         a(href="#").link.link--blue
           span About me
+  
+  // avail :: START
+  .avail
+    .container
+      .avail__title
+        span current <br> availability
+      .avail__status
+        span I currently have
+        .avail__status-line.avail__status-line--limited
+          span LIMITED
+        span availability until Feb 2017.
+      .avail__cta
+        a(href="#").link.link--yellow
+          span availability
+            
+  // CONTACT :: START
+  .contact
+    .contact__wrapper
+      .contact__title
+        span get in touch for a chat
+      .contact__credentials
+        .contact__credentials-container
+          p Feel free to get in touch, I'm always happy to discuss and advise on your project or development needs.
+          .contact__credentials-contacts
+            a(href="tel:07736 930110") 07736 930110
+            a(href="mailto:mail@johnkavanagh.co.uk") mail@johnkavanagh.co.uk
+      .contact__cta-mobile
+        a(href="#").link.link--red
+            span contact
+              
