--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -22,3 +22,6 @@
 @import components/page-nav
 @import components/footer
 @import components/index
+@import components/intro
+@import components/avail
+@import components/contact
