--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -13,6 +13,23 @@
 
   &__logo
     display: inline-block
+    transform-origin: center left
 
   &__hamburger
     margin-left: auto
+
+  &--transformed
+    transform: translate(0,-100%)
+    transition: transform .25s $ease
+    background: white
+    box-shadow: 0 3px 6px rgba(black, .1)
+
+    .header
+      &__wrapper
+        padding-top: 0px
+      &__logo
+        transform: scale(.75)
+
+  &--fixed
+    position: fixed
+    transform: translate(0,0)
