--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -1,88 +1,4 @@
 // INDEX
-
-.intro
-  &__top
-    display: flex
-  &__name
-    position: relative
-    width: 85%
-    padding-left: 30px
-    padding-top: 30px
-    &::before
-      display: inline-block
-      content: ' '
-      position: absolute 0
-      z-index: 1
-      background: $colorBlue
-
-  &__title
-    position: relative
-    z-index: 5
-    font-size: 30px
-    line-height: 1.16
-    text-transform: uppercase
-    font-weight: 500
-    letter-spacing: .22em
-    transform: translate3d(0,.5em,0)
-    &::after
-      display: inline-block
-      content: ' '
-      size: 13px 3px
-      background: currentColor
-      transform: translate(0px,4px)
-
-  &__portfolio
-    position: relative
-    width: 15%
-    margin-top: 25px
-    margin-bottom: -60px
-    &::before
-      display: inline-block
-      content: ' '
-      position: absolute 0
-      z-index: 1
-      background: $colorGreen
-    img
-      position: absolute
-      right: 0
-      top: 5%
-      width: 35vw
-      z-index: 5
-    &-cta
-      position: absolute
-      bottom: -30px
-      right: 35vw
-
-  &__bottom
-    margin-top: 160px
-    display: flex
-    flex-direction: column
-    &-cta
-      flex: 0 0 auto
-      text-align: center
-      padding-top: 10px
-
-  &__text
-    position: relative
-    padding: 20px 30px 0px 30px
-    max-width: 410px
-    &::before
-      display: inline-block
-      content: ' '
-      position: absolute 0
-      top: 0
-      left: 30px
-      z-index: 1
-      size: 60px
-      background: $colorBlue
-    &-container
-      position: relative
-      z-index: 5
-      font-size: 15px
-      letter-spacing: 0.04em
-      padding-left: 25px
-
-
 .link
   position: relative
   display: inline-block
@@ -110,6 +26,12 @@
   &--blue
     &::after
       background-color: $colorBlue
+  &--yellow
+    &::after
+      background-color: $colorYellow
+  &--red
+    &::after
+      background-color: $colorRed
   &:hover
     &::after
       transform: translate(-50%,-5px)
