--- a/src/sass/components/_page-nav.sass
+++ b/src/sass/components/_page-nav.sass
@@ -15,7 +15,7 @@
     background: #f5f5f5
     border-radius: 50%
     transition: .5s ease-in-out
-    box-shadow: 0 0 0 0 #f5f5f5, 0 0 0 0 #f5f5f5
+    // box-shadow: 0 0 0 0 #f5f5f5, 0 0 0 0 #f5f5f5
 
   &__wrapper
     display: flex
@@ -32,7 +32,8 @@
 
   &__menu
     list-style: none
-    margin: 0
+    max-width: 350px
+    margin: 0 auto
     padding: 0
     display: flex
     flex-direction: column
@@ -59,6 +60,15 @@
         width: 50%
         transform: translate3d(100%,0,0)
         transition: .35s easeOutCubic
+      &.--h-green
+        &::after
+          background-color: $colorGreen
+      &.--h-yellow
+        &::after
+          background-color: $colorYellow
+      &.--h-red
+        &::after
+          background-color: $colorRed
       a
         position: relative
         z-index: 2
@@ -108,8 +118,10 @@
   &.is-active
     pointer-events: all
     &::before
-      box-shadow: 0 0 0 100vw #f5f5f5, 0 0 0 100vh #f5f5f5
-      border-radius: 0
+      // box-shadow: 0 0 0 100vw #f5f5f5, 0 0 0 100vh #f5f5f5
+      size: calc(100vw + 100px) calc(100vh + 100px)
+      transform: scale(2)
+      // border-radius: 0
     .page-nav
       &__wrapper
         transform: translate3d(0,0vh,0)
