changed logo to svg

--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -10,4 +10,4 @@ footer.footer(js-reveal-footer)
       .footer__bottom
         .footer__copy Copyright © 2001-2017 John Kavanagh.<br> All Rights Reserved.
         .footer__logo
-          i.icon.icon-logo-small
+          +icon('ico-logo')
