--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -3,7 +3,9 @@ header.header
   .container
     .header__wrapper
       a.header__logo(href="#")
-        i.icon.icon-logo
+        //- i.icon.icon-logo
+        +icon('ico-logo')
+        span john <br>kavanagh
 
       .header__hamburger
         button(type="button" js-hamburger).hamburger.hamburger--squeeze
