--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -12,8 +12,19 @@
     padding-top: 40px
 
   &__logo
-    display: inline-block
+    flex: 0 0 auto
+    display: flex
+    align-items: center
     transform-origin: center left
+    .ico
+      font-size: 57px
+    span
+      font-weight: 700
+      display: inline-block
+      font-size: 13px
+      line-height: 1.17
+      margin-left: 15px
+      text-transform: uppercase
 
   &__hamburger
     margin-left: auto
