--- a/src/sass/components/_avail.sass
+++ b/src/sass/components/_avail.sass
@@ -4,6 +4,7 @@
   margin-top: 80px
   &__title
     position: relative
+    z-index: 1
     padding: 1em 40px 1em 0
     font-size: 30px
     line-height: 1.16
@@ -11,7 +12,7 @@
     font-weight: 500
     letter-spacing: .22em
     text-align: right
-    &::after
+    &-parallax
       display: inline-block
       content: ' '
       position: absolute
@@ -26,6 +27,8 @@
       position: relative
       z-index: 2
   &__status
+    position: relative
+    z-index: 2
     text-align: right
     margin: 30px 0
     > span
