--- a/src/sass/components/_contact.sass
+++ b/src/sass/components/_contact.sass
@@ -16,7 +16,7 @@
     font-weight: 500
     letter-spacing: .22em
     text-align: right
-    &::after
+    &-parallax
       display: inline-block
       content: ' '
       position: absolute
@@ -36,7 +36,7 @@
     margin-left: auto
     position: relative
     padding: 20px 30px 0px 0px
-    &::before
+    &-parallax
       display: inline-block
       content: ' '
       position: absolute 0
