--- a/src/sass/components/_intro.sass
+++ b/src/sass/components/_intro.sass
@@ -65,10 +65,10 @@
     position: relative
     padding: 20px 30px 0px 30px
     max-width: 410px
-    &::before
+    &-parallax
       display: inline-block
       content: ' '
-      position: absolute 0
+      position: absolute
       top: 0
       left: 30px
       z-index: 1
