--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -21,7 +21,7 @@ block content
       .intro__text
         .intro__text-parallax(js-rellax data-rellax-speed="-2" data-rellax-percentage="0.5")
         .intro__text-container
-          p I'm a freelance front-end web developer based in London. With fourteen years of experience I develop responsive, high-performance websites using HTML5, CSS, and JavaScript.
+          p I'm a freelance front-end web developer based in London. With fourteen years of experience I develop responsive, <br> high-performance websites using HTML5, CSS, and JavaScript.
       .intro__bottom-cta
         a(href="#").link.link--blue
           span About me
