--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -9,7 +9,7 @@
   &__wrapper
     display: flex
     align-items: center
-    padding-top: 40px
+    padding: 40px 30px 0 30px
 
   &__logo
     flex: 0 0 auto
@@ -44,3 +44,28 @@
   &--fixed
     position: fixed
     transform: translate(0,0)
+
++rmin($mobile)
+  .header
+    &__wrapper
+      padding-left: 50px
+      padding-right: 50px
+    &__logo
+      .ico
+        font-size: 75px
+      span
+        font-size: 15px
+        margin-left: 17px
+
++rmin($desktop)
+  .header
+    &__wrapper
+      padding-top: 60px
+      padding-left: 70px
+      padding-right: 80px
+    &__logo
+      .ico
+        font-size: 90px
+      span
+        font-size: 17px
+        margin-left: 20px
