--- a/src/sass/components/_page-nav.sass
+++ b/src/sass/components/_page-nav.sass
@@ -38,6 +38,7 @@
     display: flex
     flex-direction: column
     li
+      flex: 0 0 auto
       position: relative
       display: inline-block
       width: 100%
@@ -128,3 +129,20 @@
         opacity: 1
       &__socials
         opacity: 1
+
++rmin($mobile)
+  .page-nav
+    &__wrapper
+      padding-top: 160px
+    &__menu
+      li
+        font-size: 28px
+
+
++rmin($desktop)
+  .page-nav
+    &__wrapper
+      padding-top: 180px
+    &__menu
+      li
+        font-size: 36px
