--- a/src/sass/components/_intro.sass
+++ b/src/sass/components/_intro.sass
@@ -119,12 +119,17 @@
         padding-top: 5px
     &__text
       padding-top: 0
+      padding-left: 60px
       //margin-top: -.5em
       margin-right: auto
+      max-width: 415px
+      &-parallax
+        left: 60px
       &-parallax
         size: 85px
       &-container
         font-size: 18px
+        padding-left: 30px
         p
           margin: 0
           // padding-top: 5px
@@ -142,3 +147,49 @@
       margin-bottom: -100px
     &__bottom
       padding-left: 130px
+    &__text
+      padding-left: 100px
+      &-parallax
+        left: 100px
+
+
+
+// HOME LINES
+.home-lines
+  pointer-events: none
+  position: absolute
+  top: 65px
+  left: 0
+  right: 0
+  bottom: 0
+  z-index: 7
+  display: flex
+  flex-direction: column
+  &__wrapper
+    flex: 1 1 auto
+    position: relative
+  &__bg
+    width: 100%
+  // &__first, &__second, &__third
+  //   position: absolute
+  //   z-index: 10
+  //   display: block
+  //   background: rgba(black, .4)
+  //   width: 300vw
+  //   left: -100%
+  //   right: -100%
+  //   transform-origin: center top
+  //   height: 1px
+  // &__first
+  //   top: 0%
+  //   transform: rotate(45deg)
+  // &__second
+  //   top: 33.3%
+  //   transform: rotate(-45deg)
+  // &__third
+  //   top: 66.6%
+  //   transform: rotate(45deg)
+
++rmin($desktop)
+  .home-lines
+    top: 0
