--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -4,7 +4,7 @@ bodyClass: homepage
 ---
 extends shared/_layout
 block content
-  
+  script(type="text/x-handlebars-template")#js-homepage
   // INTRO :: START
   .intro
     // top
