--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -32,15 +32,16 @@ block content
       .avail__title
         .avail__title-parallax(js-rellax data-rellax-speed="1.5")
         span current <br> availability
-      .avail__status
-        span I currently have
-        .avail__status-line.avail__status-line--limited
-          span LIMITED
-        span availability until Feb 2017.
-      .avail__cta
-        a(href="#").link.link--yellow
-          span availability
-            
+      .avail__bottom
+        .avail__status
+          span I currently have
+          .avail__status-line.avail__status-line--limited
+            span LIMITED
+          span availability until Feb 2017.
+        .avail__cta
+          a(href="#").link.link--yellow
+            span availability
+              
   // CONTACT :: START
   .contact.wow
     .contact__wrapper
