--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -4,7 +4,7 @@ bodyClass: homepage
 ---
 extends shared/_layout
 block content
-  script(type="text/x-handlebars-template")#js-homepage
+  // script(type="text/x-handlebars-template")#js-homepage
   // INTRO :: START
   .intro
     // top
@@ -46,14 +46,17 @@ block content
   .contact.wow
     .contact__wrapper
       .contact__title
-        .contact__title-parallax(js-rellax data-rellax-speed='-3.5')
-        span get in touch for a chat
+        .contact__title-parallax(js-rellax data-rellax-speed='2.5')
+        span get in <br>touch<br> for a<br> chat
+        .contact__cta-desktop
+          a(href="#").link.link--red
+            span contact
       .contact__credentials
         .contact__credentials-parallax(js-rellax data-rellax-speed="2")
         .contact__credentials-container
           p Feel free to get in touch, I'm always happy to discuss and advise on your project or development needs.
           .contact__credentials-contacts
-            a(href="tel:07736 930110") 07736 930110
+            a(href="tel:07736 930110").contact__credentials-phone 07736 930110
             a(href="mailto:mail@johnkavanagh.co.uk") mail@johnkavanagh.co.uk
       .contact__cta-mobile
         a(href="#").link.link--red
