quick add all pages and test barba js bindings

--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -26,7 +26,7 @@ block content
         a(href="#").link.link--blue
           span About me
   
-  // avail :: START
+  // AVAIL :: START
   .avail.wow
     .container
       .avail__title
