--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -25,3 +25,5 @@
 @import components/intro
 @import components/avail
 @import components/contact
+@import components/portfolio
+@import components/about
