--- a/src/sass/components/_page-nav.sass
+++ b/src/sass/components/_page-nav.sass
@@ -76,7 +76,7 @@
         z-index: 2
         display: block
         padding: 12px
-      &:hover
+      &:hover, &.is-active
         &::after
           transform: translate3d(0,0,0)
 
