--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -1,7 +1,7 @@
 // HEADER :: START
 header.header
   .header__wrapper
-    a.header__logo(href="#")
+    a.header__logo(href="homepage.html")
       +icon('ico-logo')
       span john <br>kavanagh
 
@@ -16,15 +16,15 @@ header.header
     .page-nav__wrapper
       ul.page-nav__menu
         li
-          a(href="#") Home
+          a(href="homepage.html") Home
         li.--h-green
-          a(href="#") Portfolio
+          a(href="portfolio.html") Portfolio
         li.--h-yellow
-          a(href="#") availability
+          a(href="availability.html") availability
         li
-          a(href="#") blog
+          a(href="blog.html") blog
         li.--h-red
-          a(href="#") contact
+          a(href="contact.html") contact
       
       .page-nav__socials
         a(href="#" target="_blank")
