--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -17,6 +17,7 @@
     display: flex
     align-items: center
     transform-origin: center left
+    transition: .25s $ease
     .ico
       font-size: 57px
     span
@@ -26,6 +27,8 @@
       line-height: 1.17
       margin-left: 15px
       text-transform: uppercase
+    &:hover
+      opacity: .85
 
   &__hamburger
     margin-left: auto
