some fixes and portfolio draft

--- a/src/sass/components/_contact.sass
+++ b/src/sass/components/_contact.sass
@@ -133,6 +133,7 @@
       padding-top: 120px
       margin-bottom: -150px
       max-width: 520px
+      padding-right: 130px
       &-parallax
         size: 155px 180px
       &-container
