--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -51,7 +51,10 @@
     background-color: $colorYellow
 .--bg-red
   background-color: $colorRed
-
+.--bg-pink
+  background-color: #feacee
+.--bg-black
+  background-color: #414141
 
 
 .main-title
