--- a/src/pug/portfolio.pug
+++ b/src/pug/portfolio.pug
@@ -15,24 +15,55 @@ block content
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-item__figure
             .portfolio-item__figure-bg.--bg-blue
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_1.png' srcset='img/portfolio-project_1@2x.png 2x')
+
         // portfolio item
         .portfolio-item
-          .portfolio-item__name national broadcaster
-          .portfolio-item__short
-            p I'm a freelance front-end web developer based in London. With fourteen years of experience.
-          .portfolio-item__figure
-            .portfolio-item__figure-bg.--bg-red
-        // portfolio item
-        .portfolio-item
-          .portfolio-item__name national broadcaster
+          .portfolio-item__name fashion magazine
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-item__figure
             .portfolio-item__figure-bg.--bg-yellow
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_2.png' srcset='img/portfolio-project_2@2x.png 2x')
+
         // portfolio item
         .portfolio-item
-          .portfolio-item__name national broadcaster
+          .portfolio-item__name creative portfolio
+          .portfolio-item__short
+            p I'm a freelance front-end web developer based in London. With fourteen years of experience.
+          .portfolio-item__figure
+            .portfolio-item__figure-bg.--bg-pink
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_3.png' srcset='img/portfolio-project_3@2x.png 2x')
+
+        // portfolio item
+        .portfolio-item
+          .portfolio-item__name RECORDING STUDIOS
+          .portfolio-item__short
+            p I'm a freelance front-end web developer based in London. With fourteen years of experience.
+          .portfolio-item__figure
+            .portfolio-item__figure-bg.--bg-red
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_4.png' srcset='img/portfolio-project_4@2x.png 2x')
+
+        // portfolio item
+        .portfolio-item
+          .portfolio-item__name luxury hotels
+          .portfolio-item__short
+            p I'm a freelance front-end web developer based in London. With fourteen years of experience.
+          .portfolio-item__figure
+            .portfolio-item__figure-bg.--bg-black
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_5.png' srcset='img/portfolio-project_5@2x.png 2x')
+
+        // portfolio item
+        .portfolio-item
+          .portfolio-item__name art workshops
           .portfolio-item__short
             p I'm a freelance front-end web developer based in London. With fourteen years of experience.
           .portfolio-item__figure
             .portfolio-item__figure-bg.--bg-green
+            .portfolio-item__img-holder
+              img(src='img/portfolio-project_6.png' srcset='img/portfolio-project_6@2x.png 2x')
