--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -62,7 +62,7 @@ body, html
       padding-top: 220px
 
 .container
-  max-width: 1200px
+  // max-width: 1200px
   margin-left: auto
   margin-right: auto
   padding-left: 30px
