--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -48,13 +48,26 @@
 .--bg-green
   background-color: $colorGreen
 .--bg-yellow
-    background-color: $colorYellow
+  background-color: $colorYellow
 .--bg-red
   background-color: $colorRed
 .--bg-pink
   background-color: #feacee
 .--bg-black
   background-color: #414141
+
+.--hc-blue:hover
+  color: $colorBlue
+.--hc-green:hover
+  color: $colorGreen
+.--hc-yellow:hover
+  color: $colorYellow
+.--hc-red:hover
+  color: $colorRed
+.--hc-pink:hover
+  color: #feacee
+.--hc-black:hover
+  color: #414141
 
 
 .main-title
