--- a/src/sass/components/_portfolio.sass
+++ b/src/sass/components/_portfolio.sass
@@ -2,6 +2,9 @@
   &__wrapper
     display: flex
     flex-direction: column
+    // max-width: 1600px
+    // margin-left: auto
+    // margin-right: auto
 
 +rmin($tablet)
   .portfolio
@@ -9,13 +12,21 @@
       flex-direction: row
       flex-wrap: wrap
 
++rmin($desktop)
+  .portfolio
+    &__wrapper
+      padding-left: 30px
+      padding-right: 30px
+
 .portfolio-item
   flex: 0 0 auto
   min-width: 1px
   min-height: 1px
   width: 100%
-  margin-bottom: 20px
+  max-width: 400px
+  margin: 0px auto 20px auto
   &__name
+    display: inline-block
     max-width: 300px
     font-size: 22px
     letter-spacing: 0.22em
@@ -24,6 +35,10 @@
     text-transform: uppercase
     margin-bottom: 10px
     word-spacing: 100vw
+    transition: .25s $ease
+    &:hover
+      // hover color to set individually with mod class
+      // color: $colorBlue
   &__short
     max-width: 300px
     font-size: 14px
@@ -41,13 +56,59 @@
       height: 50%
       z-index: 1
   &__img-holder
+    display: block
     position: relative
     z-index: 2
     padding-top: 4%
     transform: translateX(11%)
+    transform-origin: top center
+    transition: transform .25s easeInOutCubic
+    &:hover
+      transform: translateX(5%) scale(.96)
     img
       max-width: 100%
 
 +rmin($tablet)
   .portfolio-item
     flex: 0 1 50%
+    margin-bottom: 40px
+    &:nth-child(odd)
+      margin-left: 0
+      padding-right: 20px
+    &:nth-child(even)
+      margin-right: 0
+      padding-left: 20px
+    &__img-holder
+      transform: translateX(8%)
+
++rmin($desktop)
+  .portfolio-item
+    max-width: 580px
+    margin-bottom: 60px
+    &:nth-child(odd)
+      padding-right: 40px
+    &:nth-child(even)
+      padding-left: 40px
+    &__name
+      font-size: 28px
+      max-width: 400px
+      padding-left: 30px
+    &__short
+      font-size: 14px
+      max-width: 400px
+      padding-left: 30px
+    &__figure
+      margin-top: 45px
+
++rmin(1600)
+  .portfolio-item
+    flex: 0 1 33.3%
+    padding-right: 40px
+    padding-left: 40px
+    &:nth-child(1n)
+      margin-right: auto
+    &:nth-child(2n)
+      margin-right: auto
+      margin-left: auto
+    &:nth-child(3n)
+      margin-left: auto
