--- a/src/sass/components/_contact.sass
+++ b/src/sass/components/_contact.sass
@@ -147,3 +147,44 @@
           margin-bottom: .5em
           &.contact__credentials-phone
             font-size: 36px
+
+
+/* Contact inner page
+.contact-enq
+  display: flex
+  flex-direction: column
+  margin-bottom: 50px
+  &__left
+
+  &__right
+    padding-left: 30px
+    padding-right: 30px
+
++rmin($mobile)
+  .contact-enq
+    margin-bottom: 80px
+    &__right
+      padding-left: 50px
+      padding-right: 50px
+
++rmin($tablet)
+  .contact-enq
+    margin-bottom: 100px
+    &__right
+      padding-left: 50px
+      padding-right: 80px
+
++rmin($desktop)
+  .contact-enq
+    flex-direction: row
+    margin-bottom: 150px
+    &__left
+      flex: 0 1 50%
+    &__right
+      flex: 0 1 50%
+      padding-right: 130px
+
+.contact-form
+  max-width: 490px
+  .link
+    margin-top: 20px
