--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -16,6 +16,7 @@
 @import elements/icons
 @import elements/modal
 @import elements/ui
+@import elements/typography
 @import elements/wow
 
 @import components/header
